Demo. Fix parsing cssVars in dark mode

--- a/demo/src/elements/userCode.scss
+++ b/demo/src/elements/userCode.scss
@@ -32,7 +32,7 @@
 
 .btnCommon {
   padding: 4px 10px;
-  margin: 4px 0;
+  margin: 10px 0 4px 0;
   color: $activeLinkColor;
   background: none;
   cursor: pointer;
